--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@
 
 body {
   margin: 0;
-  background: var(--Background);
+  background-color: var(--PageBackground);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -71,4 +71,10 @@ a {
 }
 .half-margin-bottom {
   margin-bottom: 0.5rem;
+}
+
+.country__container {
+  width: 100%;
+  height: calc(100vh - var(--HeaderHeight));
+  background-color: var(--PageBackgound);
 }
