--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,95 @@ a {
   height: calc(100vh - var(--HeaderHeight));
   background-color: var(--PageBackgound);
 }
+
+.back-button{
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem 0.6rem;
+  box-shadow: var(--Shadow);
+  background-color: var(--Background);
+  width: 100px;
+  transition-duration: var(--transition);
+  color: var(--Text);
+  border-radius: var(--Radius);
+  margin-bottom: 2rem;
+}
+.country-info{
+  position: relative;
+  display: grid;
+  justify-content: center;
+  width: 100%;
+  grid-template-columns: 1fr;
+  transition-duration: var(--transition);
+  background-color: var(--PageBackgound)
+}
+.country-info-image-container{
+  max-height: 280px;
+  min-width: 300px;
+  max-width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem
+}
+.country-info-image{
+  max-width: 80%;
+  border-radius: var(--Radius);
+}
+.sub-info span::after{
+  content: ',';
+  position: relative;
+  right: 4px;
+}
+.sub-info span:last-child::after{
+  content: ''
+}
+.borders-title{
+  margin-bottom: 0.5rem;
+  min-width: 8rem;
+}
+.borders{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  column-gap: .7rem;
+}
+.country-border{
+  margin: 0;
+}
+@media screen and (min-width: 748px){
+  .country-info{
+    grid-template-columns: 46% 50%;
+    column-gap: 2.5rem;
+    top: 1rem;
+  }
+  .country-info-image-container{
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+  }
+  .country-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 1rem;
+  }
+  .country-info-text{
+    display: grid;
+    align-items: center;
+  }
+  .country-info-border{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    column-gap: 1rem;
+    padding-right: 4rem;
+  }
+  .country-info-name{
+    font-size: 2rem;
+  }
+  .borders-title{
+    margin-bottom: 0;
+  }
+}
